Fix unordered list alignment in footnotes section

--- a/_src/sass/base/_footnotes.scss
+++ b/_src/sass/base/_footnotes.scss
@@ -67,7 +67,8 @@
             animation: temporary-background 2s;
         }
 
-        ol {
+        ol,
+        ul {
         /*** Reinstate sub-list margins.
          ***/
             @include rem("margin-left",  $gutter);
